# drone-companion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: test.yml
docs/: 01-quickstart.md  02-hardware.md  03-gcs-setup.md  04-lte-setup.md  05-troubleshooting.md  README.md  release-qa.md
installer/lib/: common.sh  test_common.bats
installer/steps/: 10-detect-hardware.sh  20-packages.sh  30-users-dirs.sh  40-zerotier.sh  50-mavlink-router.sh  60-camera-gst.sh  65-uart.sh  70-lte.sh  80-ui.sh  90-services.sh
installer/templates/: config.example.yaml  drone-video.env.j2  mavlink-router.conf.j2
scripts/: drone-update  gcs-view-mjpeg.sh  reload-config  stream.sh  test_reload-config.bats
services/: drone-ui.service  drone-video.service  mavlink-router.service
ui/: pyproject.toml
ui/drone_ui/: __init__.py  config.py  main.py  render.py  services.py
ui/drone_ui/routes/: mavlink.py  setup.py  status.py  system.py  video.py
ui/drone_ui/routes/network/: lte.py  zerotier.py
ui/drone_ui/static/css/: main.css
ui/drone_ui/templates/: _gpio_header.html  base.html  mavlink.html  status.html  system.html  video.html
ui/drone_ui/templates/network/: lte.html  zerotier.html
ui/drone_ui/templates/setup/: gcs.html  summary.html  video.html  zerotier.html
ui/tests/: conftest.py  test_config.py  test_main.py  test_render.py  test_routes.py  test_services.py
